nixidy/generated/prod/ollama/Pod-ollama-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
  name: ollama-test-connection
  namespace: ai
spec:
  containers:
    - args:
        - ollama:11434
      command:
        - wget
      image: busybox
      name: wget
  restartPolicy: Never
