nixidy/generated/prod/ollama/Service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
  name: ollama
  namespace: ai
spec:
  ports:
    - name: http
      port: 11434
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  type: ClusterIP
