nixidy/generated/prod/ollama/HTTPRoute-ollama.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ai
spec:
  hostnames:
    - ollama.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
